--- a/package.json
+++ b/package.json
@@ -9,26 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "mapbox-gl": "^3.0.0",
-    "react-map-gl": "^7.1.0",
     "@types/mapbox-gl": "^3.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "lucide-react": "^0.294.0",
+    "mapbox-gl": "^3.0.0",
+    "next": "^14.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-map-gl": "^7.1.0",
     "tailwind-merge": "^2.0.0",
-    "lucide-react": "^0.294.0"
+    "topojson-client": "^3.1.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/topojson-client": "^3.1.5",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "14.0.0",
     "postcss": "^8.0.0",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8.0.0",
-    "eslint-config-next": "14.0.0"
+    "typescript": "^5.0.0"
   }
 }
